# nativephp-thinkphp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  composer.json  mkdocs.yml  package.json  phpstan.neon  phpunit-fix.xml  test_event_dispatcher.php  test_fix.php  test_real_world.php
config/: native.php  nativephp.php
docs/: README.md  advanced-features.md  auto-updater.md  basic-features.md  broadcasting.md  cache.md  child-processes.md  clipboard.md  cloud-integration.md  compatibility-guide.md  contributing.md  cross-platform-enhancements.md  developer-experience.md  device.md  dock.md  documentation-plan.md  example-applications.md  example-apps.md  extension-features.md  faq.md  geolocation.md  index.md  installation.md  keyboard.md  performance-optimization.md  plugin-ecosystem.md  printer.md  processes.md  push-notifications.md  queue-worker.md  roadmap.md  screen.md  security-enhancements.md  shortcut.md  speech.md  system.md
examples/: README.md
public/: native-advanced-demo.html  native-demo.html  native-push-demo.html
routes/: api.php
src/: Alert.php  App.php  Assets.php  AutoUpdater.php  Bridge.php  Broadcasting.php  ChildProcess.php  Client.php  Clipboard.php  ContextMenu.php  Database.php  DeveloperTools.php  Device.php  Dialog.php  Dock.php  EventDispatcher.php  FileSystem.php  Geolocation.php  GlobalShortcut.php  Hotkey.php  Http.php  Ipc.php  Keyboard.php  Menu.php  Native.php  NativeAppServiceProvider.php  NativeAppServiceProvider.php.fixed  Network.php  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+614 files in other folders)
