[package]
name = "nativephp-app"
version = "0.1.0"
description = "A NativePHP ThinkPHP Desktop Application"
authors = ["james.xue"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["api-all"] }
window-shadows = "0.2"
window-vibrancy = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true